# blackbird

./: .gitignore  CMakeLists.txt  README.md  benchmark_disk_backends  benchmark_disk_backends.cpp  test_detail.xml
clients/: benchmark_client.cpp  ucx_client.cpp
configs/: cxl_worker.yaml  keystone.yaml  worker.yaml
examples/: CMakeLists.txt  README.md  benchmark_disk_backends.cpp  benchmark_ucx_transports.cpp  cxl_example.cpp  keystone_example.cpp  master_example.cpp  setup_example.cpp  simple_client_test.cpp  test_disk_allocation.cpp  test_mmap_disk_backend.cpp  worker_example.cpp  ylt_client_example.cpp
include/blackbird/: etcd_service.h  keystone_service.h  master_service.h  rpc_service.h  types.h
include/blackbird/allocation/: allocator_interface.h  keystone_allocator_adapter.h  range_allocator.h
include/blackbird/client/: blackbird_client.h
include/blackbird/common/: types.h
include/blackbird/common/error/: error_codes.h
include/blackbird/error/: error_codes.h  error_domain.h
include/blackbird/etcd/: etcd_service.h
include/blackbird/keystone/: keystone_service.h
include/blackbird/rpc/: rpc_service.h
include/blackbird/transport/: cxl_transport_config.h  ucx_engine.h
include/blackbird/worker/: worker_service.h
include/blackbird/worker/storage/: cxl_memory_backend.h  disk_backend.h  iouring_disk_backend.h  mmap_disk_backend.h  ram_backend.h  storage_backend.h
proto/: worker.proto
scripts/: start_cluster.sh  stop_cluster.sh
src/: CMakeLists.txt  etcd_service.cpp  keystone_service.cpp  master_service.cpp  proto_adapters.cpp  rpc_service.cpp  types.cpp
src/allocation/: keystone_allocator_adapter.cpp  range_allocator.cpp
src/client/: blackbird_client.cpp
src/common/: types.cpp
src/common/error/: error_codes.cpp
src/error/: error_codes.cpp
src/etcd/: etcd_service.cpp
src/executables/: CMakeLists.txt
src/keystone/: keystone_service.cpp
src/rpc/: rpc_service.cpp
src/transport/: ucx_engine.cpp
src/worker/: worker_service.cpp
src/worker/storage/: cxl_memory_backend.cpp  disk_backend.cpp  iouring_disk_backend.cpp  mmap_disk_backend.cpp  ram_backend.cpp
tests/: CMakeLists.txt
tests/allocation/: test_pool_allocator.cpp  test_range_allocator.cpp
tests/client/: test_blackbird_client_header.cpp  test_blackbird_client_logic.cpp
tests/storage/: test_disk_backend.cpp  test_iouring_disk_backend.cpp
